--- a/app/templates/reference.html
+++ b/app/templates/reference.html
@@ -20,11 +20,12 @@
       <div class="right-section">
         <a href="/faq/" class="FAQ">문의</a>
         <a href="/login/" class="login">로그인</a>
-        <a href="/index/" class="createaccount">회원가입</a>
+        <a href="/register/" class="createaccount">회원가입</a>
       </div>
     </section>
     {% block search %} {% endblock %} {% block activate %} {% endblock %} {% block login %} {% endblock %} {% comment %}
-    이거 왜이래래 {% endcomment %} {% block choose %} {% endblock %} {%block script%} {%endblock%}
+    이거 왜이래래 {% endcomment %} {% block choose %} {% endblock %} {% block title %} {% endblock %} {%block content%}
+    {%endblock%} {%block script%} {%endblock%}
     <div class="footer">
       <div class="footer-upper-box">
         <div class="box">김혜원</div>
