--- a/app/static/css/total.css
+++ b/app/static/css/total.css
@@ -771,3 +771,291 @@ body {
   font-weight: bold;
   margin-bottom: 10px;
 }
+
+/* register.html */
+table {
+  width: 280px;
+  height: 550px;
+  margin: auto;
+}
+.register-email {
+  width: 127px;
+  height: 32px;
+  font-size: 15px;
+  border: 0;
+  border-color: lightgray;
+  border-radius: 15px;
+  outline: none;
+  padding-left: 10px;
+  background-color: rgb(233, 233, 233);
+}
+.register-text {
+  width: 250px;
+  height: 32px;
+  font-size: 15px;
+  border: 0;
+  border-radius: 15px;
+  outline: none;
+  padding-left: 10px;
+  background-color: rgb(233, 233, 233);
+}
+select {
+  width: 100px;
+  height: 32px;
+  font-size: 15px;
+  border: 1;
+  border-color: lightgray;
+  border-radius: 15px;
+  outline: none;
+  padding-left: 10px;
+}
+.register-btn {
+  width: 262px;
+  height: 32px;
+  font-size: 15px;
+  border: 0;
+  border-radius: 15px;
+  outline: none;
+  padding-left: 10px;
+  background-color: rgb(164, 199, 255);
+}
+.register-btn:active {
+  width: 262px;
+  height: 32px;
+  font-size: 15px;
+  border: 0;
+  border-radius: 15px;
+  outline: none;
+  padding-left: 10px;
+  background-color: rgb(61, 135, 255);
+}
+
+/* menu-search-page.html, cat-search-page.html */
+.search-page-bar {
+  flex: 1;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
+  height: 100px;
+  font-size: 20px;
+  border: 0;
+  border-radius: 20px;
+  outline: none;
+  padding-left: 40px;
+  padding-right: 40px;
+  background-color: rgb(233, 233, 233);
+  margin-top: 10vh;
+}
+.search-page-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+.searh-page-banner {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  margin-top: 50px;
+}
+.search-page-wrapper {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  border: black;
+}
+.searh-page-header {
+  position: relative;
+  left: 50px;
+  margin-top: 20px;
+  display: flex;
+  font-size: 20px;
+}
+.banner-list {
+  margin-top: 20px;
+  display: flex;
+  font-size: 20px;
+  gap: 30px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.banner-list li {
+  display: flex;
+  align-items: center;
+  background: #ffcc00;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 15px;
+  width: 300px;
+  height: 100px;
+  transition: transform 0.2s ease-in-out;
+}
+.banner-list li:hover {
+  transform: scale(1.05);
+}
+.banner-list-content {
+  height: 100%;
+}
+.banner-list-content img {
+  width: 80px;
+  height: 80px;
+  border-radius: 8px;
+  object-fit: cover;
+  margin-right: 15px;
+}
+
+.banner-list-content h3 {
+  font-size: 18px;
+  margin: 0;
+  color: #333;
+}
+
+.banner-list-content p {
+  font-size: 14px;
+  color: #666;
+  margin-top: 5px;
+}
+
+.home-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #333;
+  overflow-x: hidden;
+  height: 100vh;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.home-input {
+  display: none;
+}
+
+.home-container {
+  width: 100%;
+  height: 100%;
+  max-width: 600px;
+  max-height: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform-style: preserve-3d;
+  flex-direction: column;
+  margin-bottom: 100px;
+}
+
+.home-cards {
+  position: relative;
+  height: 500px;
+  width: 430px;
+  margin-bottom: 20px;
+  perspective: 1000px;
+  transform-style: preserve-3d;
+}
+
+.home-cards label {
+  position: absolute;
+  width: 430px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  cursor: pointer;
+  transition: transform 0.55s ease;
+}
+
+.home-cards .home-card {
+  position: relative;
+  height: 100%;
+  background-color: #404457;
+  border-radius: 10px;
+  padding: 30px 35px;
+}
+
+.home-cards .home-image {
+  display: flex;
+  justify-content: space-between;
+}
+.home-cards .home-image img {
+  border-radius: 5px;
+  box-shadow: 15px 15px 40px;
+  width: 86%;
+  height: 220px;
+  object-fit: cover;
+  transition: all 0.7s;
+}
+.home-cards .home-image img:hover {
+  transform: scale(1.05);
+}
+
+.home-cards .home-dots {
+  text-align: center;
+}
+.home-dots div {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+
+.home-card .home-infos {
+  display: block;
+}
+.home-infos .home-name {
+  font-size: 30px;
+  color: var(--home-current-color1);
+  letter-spacing: 8px;
+}
+.home-card .home-lorem {
+  font-size: 15.5px;
+  letter-spacing: 10px;
+}
+
+#home-s1:checked ~ .home-cards #home-slide4,
+#home-s2:checked ~ .home-cards #home-slide5,
+#home-s3:checked ~ .home-cards #home-slide1,
+#home-s4:checked ~ .home-cards #home-slide2,
+#home-s5:checked ~ .home-cards #home-slide3 {
+  box-shadow: 0 15px 30px rgb(0, 1, 2);
+  transform: translate3d(-100%, 0, -220px);
+  --home-current-color1: #eceaed;
+  --home-current-color2: #404457;
+}
+#home-s1:checked ~ .home-cards #home-slide5,
+#home-s2:checked ~ .home-cards #home-slide1,
+#home-s3:checked ~ .home-cards #home-slide2,
+#home-s4:checked ~ .home-cards #home-slide3,
+#home-s5:checked ~ .home-cards #home-slide4 {
+  box-shadow: 0 20px 40px rgb(0, 1, 2);
+  transform: translate3d(-50%, 0, -120px);
+  --home-current-color1: #eceaed;
+  --home-current-color2: #404457;
+}
+#home-s1:checked ~ .home-cards #home-slide1,
+#home-s2:checked ~ .home-cards #home-slide2,
+#home-s3:checked ~ .home-cards #home-slide3,
+#home-s4:checked ~ .home-cards #home-slide4,
+#home-s5:checked ~ .home-cards #home-slide5 {
+  box-shadow: 0 15px 30px rgb(0, 1, 2);
+  transform: translate3d(0, 0, 0);
+  --home-current-color1: #eceaed;
+  --home-current-color2: #404457;
+}
+#home-s1:checked ~ .home-cards #home-slide2,
+#home-s2:checked ~ .home-cards #home-slide3,
+#home-s3:checked ~ .home-cards #home-slide4,
+#home-s4:checked ~ .home-cards #home-slide5,
+#home-s5:checked ~ .home-cards #home-slide1 {
+  box-shadow: 0 20px 40px rgb(0, 1, 2);
+  transform: translate3d(50%, 0, -120px);
+  --home-current-color1: #eceaed;
+  --home-current-color2: #404457;
+}
+#home-s1:checked ~ .home-cards #home-slide3,
+#home-s2:checked ~ .home-cards #home-slide4,
+#home-s3:checked ~ .home-cards #home-slide5,
+#home-s4:checked ~ .home-cards #home-slide1,
+#home-s5:checked ~ .home-cards #home-slide2 {
+  box-shadow: 0 15px 30px rgb(0, 1, 2);
+  transform: translate3d(100%, 0, -220px);
+  --home-current-color1: #eceaed;
+  --home-current-color2: #404457;
+}
