--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -170,21 +170,21 @@
         </style>
     </head>
     <body>
-        <object class="header" data="header.html"></object>
-        <section class = 'middle'>
-            <div class = 'search-bar'>
+        <object class="menu-header" data="header.html"></object>
+        <section class = 'menu-middle'>
+            <div class = 'menu-search-bar'>
                 <i class = 'fas fa-search'></i>
                 <input class = 'search-bar__input' type = 'search' placeholder = '입맛 다시는 중.....' />
             </div>
         </section>
-        <section class = 'main-bar'>
-            <div class = 'main-bar-title'> COFFEE
+        <section class = 'menu-main-bar'>
+            <div class = 'menu-main-bar-title'> COFFEE
             </div>
-            <div class = 'main-bar-title'> BEVERAGE
+            <div class = 'menu-main-bar-title'> BEVERAGE
             </div>
-            <div class = 'main-bar-title'> DESSERT
+            <div class = 'menu-main-bar-title'> DESSERT
             </div>
-            <div class = 'main-bar__input'>
+            <div class = 'menu-main-bar__input'>
                 <input type = 'radio' id = 'group1-btn1' name = 'group1'>
                 <label for = 'group1-btn1'> 카라멜 마끼아또 </label>
                 </button>
