--- a/app/static/css/total.css
+++ b/app/static/css/total.css
@@ -4,15 +4,15 @@
 }
 
 /* reference.css */
-#wrap {
+#reference-wrap {
   position: relative;
 }
-.header {
+.reference-header {
   display: flex;
   flex-direction: row;
   /* margin-bottom: 100px; */
 }
-.left-section {
+.reference-left-section {
   display: flex;
   flex-direction: column;
   width: 100px;
@@ -20,7 +20,7 @@
   justify-content: center;
   margin-right: 10px;
 }
-.middle-section {
+.reference-middle-section {
   flex: 1;
   display: flex;
   align-items: center;
@@ -29,36 +29,36 @@
   padding-left: 20px;
   justify-content: left;
 }
-.right-section {
+.reference-right-section {
   display: flex;
   align-items: center;
   height: 50px;
   justify-content: space-between;
   right: 0;
 }
-.map,
-.menu,
-.category,
-.keyword {
+.reference-map,
+.reference-menu,
+.reference-category,
+.reference-keyword {
   position: relative;
   padding: 20px;
   margin: 0;
 }
-.FAQ,
-.login,
-.createaccount {
+.reference-FAQ,
+.reference-login,
+.reference-register {
   position: relative;
   padding: 5px;
   margin: 0;
 }
-.header-title {
+.reference-header-title {
   font-size: 20px;
 }
-.header-sub-title {
+.reference-header-sub-title {
   font-size: 10px;
 }
 
-.footer {
+.reference-footer {
   display: flex;
   position: absolute;
   bottom: 0px;
@@ -69,19 +69,19 @@
   justify-content: center;
   flex-direction: column;
 }
-.footer-upper-box {
+.reference-footer-upper-box {
   background-color: pink;
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
-.box {
+.reference-box {
   display: flex;
   color: white;
   align-items: center;
   padding: 10px;
 }
-.footer-link {
+.reference-footer-link {
   display: flex;
   color: white;
   align-items: center;
@@ -174,53 +174,48 @@ a {
   animation: carousel-animate-horizontal 27s linear infinite;
 }
 
-.slide:first-child {
-  opacity: 1 !important;
-  position: relative !important;
-}
-
 .slide:nth-child(1) {
-  /* -webkit-animation-delay: calc(3s * -1); */
+  -webkit-animation-delay: calc(3s * -1);
   animation-delay: calc(3s * -1);
 }
 
 .slide:nth-child(2) {
-  /* -webkit-animation-delay: calc(3s * 0); */
+  -webkit-animation-delay: calc(3s * 0);
   animation-delay: calc(3s * 0);
 }
 
 .slide:nth-child(3) {
-  /* -webkit-animation-delay: calc(3s * 1); */
+  -webkit-animation-delay: calc(3s * 1);
   animation-delay: calc(3s * 1);
 }
 
 .slide:nth-child(4) {
-  /* -webkit-animation-delay: calc(3s * 2); */
+  -webkit-animation-delay: calc(3s * 2);
   animation-delay: calc(3s * 2);
 }
 
 .slide:nth-child(5) {
-  /* -webkit-animation-delay: calc(3s * 3); */
+  -webkit-animation-delay: calc(3s * 3);
   animation-delay: calc(3s * 3);
 }
 
 .slide:nth-child(6) {
-  /* -webkit-animation-delay: calc(3s * 4); */
+  -webkit-animation-delay: calc(3s * 4);
   animation-delay: calc(3s * 4);
 }
 
 .slide:nth-child(7) {
-  /* -webkit-animation-delay: calc(3s * 5); */
+  -webkit-animation-delay: calc(3s * 5);
   animation-delay: calc(3s * 5);
 }
 
 .slide:nth-child(8) {
-  /* -webkit-animation-delay: calc(3s * 6); */
+  -webkit-animation-delay: calc(3s * 6);
   animation-delay: calc(3s * 6);
 }
 
 .slide:last-child {
-  /* -webkit-animation-delay: calc(-3s * 2); */
+  -webkit-animation-delay: calc(-3s * 2);
   animation-delay: calc(-3s * 2);
 }
 
@@ -235,7 +230,7 @@ a {
   height: 100%; /* 또는 원하는 높이 */
 }
 
-@keyframes carousel-animate-horizontal {
+@-webkit-keyframes carousel-animate-horizontal {
   0% {
     transform: translateX(100%) scale(0.5);
     opacity: 0;
@@ -329,7 +324,7 @@ a {
   margin-top: 10vh; /* 헤더 아래로 검색창 내리기 */
 }
 
-.search-bar {
+.home-search-search-bar {
   flex: 1;
   display: block;
   margin-left: auto;
@@ -346,7 +341,7 @@ a {
   background-color: rgb(233, 233, 233);
 }
 
-.suggestion-box {
+.home-search-suggestion-box {
   position: absolute;
   top: 50px; /* 검색창 아래 */
   left: 50%; /* 중앙 정렬 */
@@ -367,23 +362,23 @@ a {
 /*
   .hidden {
     display: none;
-  }
+  }ffff
   */
 
-.hidden {
+.home-search-hidden {
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
 }
 
-.suggestion-box.show {
+.home-search-suggestion-box.show {
   opacity: 1;
   visibility: visible;
 }
 
-#searchSuggestions {
+#home-search-searchSuggestions {
   margin-top: 30px;
-  /* margin-bottom: 25px; */
+  /* margsin-bottom: 25px; */
   bottom: 20px;
   margin-top: 30px;
   /* margin-bottom: 25px; */
@@ -395,19 +390,23 @@ a {
   margin-bottom: 40px;
 }
 
-#searchSuggestions h3 {
+#container_what {
+  margin-bottom: 40px;
+}
+
+#home-search-searchSuggestions h3 {
   font-size: 16px;
   font-weight: bold;
   margin-bottom: 10px;
 }
 
-.button-grid {
+.home-search-button-grid {
   display: flex; /* Flexbox 사용 */
   flex-wrap: wrap; /* 화면이 작으면 자동 줄바꿈 */
   gap: 10px; /* 버튼 간격 */
 }
 
-.tag-btn {
+.home-search-tag-btn {
   display: inline-flex; /* 내부 아이콘과 텍스트 정렬을 위한 flex */
   align-items: center;
   justify-content: center;
@@ -426,18 +425,18 @@ a {
 }
 
 /* 숫자 스타일 */
-.tag-btn span {
+.home-search-tag-btn span {
   font-size: 12px;
   color: #888;
   margin-left: 5px;
 }
 
 /* 호버 효과 */
-.tag-btn:hover {
+.home-search-tag-btn:hover {
   background-color: #e9ecef;
 }
 
-.tag-btn.selected {
+.home-search-tag-btn.selected {
   background-color: #ffcc00; /* 노란색 배경 */
   color: black;
   font-weight: bold;
@@ -453,13 +452,13 @@ body {
   display: flex;
 }
 
-#map {
+#findbymap-map {
   height: 100%;
   width: 70%;
   max-width: 2000px; /* 최대 높이 제한 */
 }
 
-.info-layers {
+.findbymap-info-layers {
   /* margin-top: 20px; */
   flex: 1;
   align-items: center;
@@ -468,7 +467,7 @@ body {
   overflow-y: scroll;
 }
 
-.info-box {
+.findbymap-info-box {
   padding: 10px;
   display: flex;
   flex-direction: column;
@@ -477,20 +476,13 @@ body {
   margin: 10px auto;
   background-color: white;
 }
-.info-layers {
+.findbymap-info-layers {
   -ms-overflow-style: none;
 }
-.info-layers::-webkit-scrollbar {
+.findbymap-info-layers::-webkit-scrollbar {
   display: none;
 }
 
-/* .find-mat{
-    font-size: larger;
-    font-weight: bolder;
-} */
-/* .sidebar{
-    overflow-y: scroll;
-}  */
 
 /* login.css */
 * {
@@ -553,11 +545,11 @@ body {
 
 /* #login-form > input[type='checkbox'] {
   display: none;
-} */
-/* #login-form > label {
+}
+#login-form > label {
   color: #999999;
 }
-#login-form input[type='checkbox'] + label {
+/* #login-form input[type='checkbox'] + label {
   cursor: pointer;
   padding-left: 26px;
   background-image: url('checkbox.png');
@@ -601,12 +593,12 @@ body {
 fa-search {
   font-size: 15px;
 }
-.middle {
+.menu-middle {
   display: flex;
   text-align: center;
   justify-content: center;
 }
-.main-bar {
+.menu-main-bar {
   display: grid;
   justify-content: center;
   width: 1000px;
@@ -618,7 +610,7 @@ fa-search {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
 }
-.main-bar-title {
+.menu-main-bar-title {
   display: flex;
   justify-content: center;
   width: 270px;
@@ -632,7 +624,7 @@ fa-search {
   align-items: center;
   font-size: 25px;
 }
-.main-bar__input {
+.menu-main-bar__input {
   display: block;
   justify-content: center;
   width: 300px;
