--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,133 +2,21 @@
 {% include "partials/home_search.html" %}
 {% endblock %}
 {% block activate%}
-<div class="home-body">
-        <div class="home-container">
-            <input class="home-input" type="radio" name="home-slider" id="home-s1" checked>
-            <input class="home-input" type="radio" name="home-slider" id="home-s2">
-            <input class="home-input" type="radio" name="home-slider" id="home-s3">
-            <input class="home-input" type="radio" name="home-slider" id="home-s4">
-            <input class="home-input" type="radio" name="home-slider" id="home-s5">
-            <div class="home-cards">
-                <label for="home-s1" id="home-slide1"> 
-                    <div class="home-card">
-                        <div class="home-image">
-                            <img src="../static/css/image/KakaoTalk_20221007_222113499.jpg" alt="Nike SuperRep Go">
-                            <div class="home-dots">
-                                <div></div>
-                                <div></div>
-                                <div></div>
-                            </div>
-                        </div>
-                        <div class="home-infos">
-                            <span class="home-name">Nike SuperRep Go</span>
-                            <span class="home-lorem"> slide1</span>
-                            <a href="/details" class="home-btn-details">details</a>
-                            <div class="home-actions">
-                                <i class="fa-solid fa-cart-shopping"></i>
-                                <i class="fa-regular fa-heart"></i>
-                                <i class="fa-regular fa-bookmark"></i>
-                                <i class="fa-solid fa-share-nodes"></i>
-                            </div>
-                        </div>
-                    </div>
-                </label>
-                <label for="home-s2" id="home-slide2"> 
-                    <div class="home-card">
-                        <div class="home-image">
-                            <img src="../static/css/image/KakaoTalk_20221007_222113499.jpg" alt="Nike SuperRep Go">
-                            <div class="home-dots">
-                                <div></div>
-                                <div></div>
-                                <div></div>
-                            </div>
-                        </div>
-                        <div class="home-infos">
-                            <span class="home-name">Nike SuperRep Go</span>
-                            <span class="home-lorem"> slide2</span>
-                            <a href="/details" class="home-btn-details">details</a>
-                            <div class="home-actions">
-                                <i class="fa-solid fa-cart-shopping"></i>
-                                <i class="fa-regular fa-heart"></i>
-                                <i class="fa-regular fa-bookmark"></i>
-                                <i class="fa-solid fa-share-nodes"></i>
-                            </div>
-                        </div>
-                    </div>
-                </label>
-                <label for="home-s3" id="home-slide3"> 
-                    <div class="home-card">
-                        <div class="home-image">
-                            <img src="../static/css/image/KakaoTalk_20221007_222113499.jpg" alt="Nike SuperRep Go">
-                            <div class="home-dots">
-                                <div></div>
-                                <div></div>
-                                <div></div>
-                            </div>
-                        </div>
-                        <div class="home-infos">
-                            <span class="home-name">Nike SuperRep Go</span>
-                            <span class="home-lorem"> slide3</span>
-                            <a href="/details" class="home-btn-details">details</a>
-                            <div class="home-actions">
-                                <i class="fa-solid fa-cart-shopping"></i>
-                                <i class="fa-regular fa-heart"></i>
-                                <i class="fa-regular fa-bookmark"></i>
-                                <i class="fa-solid fa-share-nodes"></i>
-                            </div>
-                        </div>
-                    </div>
-                </label>
-                <label for="home-s4" id="home-slide4"> 
-                    <div class="home-card">
-                        <div class="home-image">
-                            <img src="../static/css/image/KakaoTalk_20221007_222113499.jpg" alt="Nike SuperRep Go">
-                            <div class="home-dots">
-                                <div></div>
-                                <div></div>
-                                <div></div>
-                            </div>
-                        </div>
-                        <div class="home-infos">
-                            <span class="home-name">Nike SuperRep Go</span>
-                            <span class="home-lorem"> slide4</span>
-                            <a href="/details" class="home-btn-details">details</a>
-                            <div class="home-actions">
-                                <i class="fa-solid fa-cart-shopping"></i>
-                                <i class="fa-regular fa-heart"></i>
-                                <i class="fa-regular fa-bookmark"></i>
-                                <i class="fa-solid fa-share-nodes"></i>
-                            </div>
-                        </div>
-                    </div>
-                </label>
-                <label for="home-s5" id="home-slide5"> 
-                    <div class="home-card">
-                        <div class="home-image">
-                            <img src="../static/css/image/KakaoTalk_20221007_222113499.jpg" alt="Nike SuperRep Go">
-                            <div class="home-dots">
-                                <div></div>
-                                <div></div>
-                                <div></div>
-                            </div>
-                        </div>
-                        <div class="home-infos">
-                            <span class="home-name">Nike SuperRep Go</span>
-                            <span class="home-lorem"> slide5</span>
-                            <a href="/details" class="home-btn-details">details</a>
-                            <div class="home-actions">
-                                <i class="fa-solid fa-cart-shopping"></i>
-                                <i class="fa-regular fa-heart"></i>
-                                <i class="fa-regular fa-bookmark"></i>
-                                <i class="fa-solid fa-share-nodes"></i>
-                            </div>
-                        </div>
-                    </div>
-                </label>
+<main class = 'main-container'>
+    <div class='wrapper'>
+        <div class='carousel'>
+        	<div class='slide'>
+                <img src="../static/css/image/KakaoTalk_20221007_222113499.jpg" frameborder="0" allowfullscreen></img>
+            </div>
+            <div class='slide'>
+                <img src="/intro-to-html/123.png" frameborder="0" allowfullscreen></img>
+            </div>
+            <div class="slide">
+                <img src="/intro-to-html/112.jpg" frameborder="0" allowfullscreen></img>
             </div>
         </div>
-    </div>
-
+    </div>      
+</main>
 {% endblock %} 
 
 {%block script%} 
