--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -6,6 +6,7 @@
     <form method="post" action="home.html" id="login-form">
       <input type="text" name="userName" placeholder="Email" />
       <input type="password" name="userPassword" placeholder="Password" />
+      <label for="remember-check"> <input type="checkbox" id="remember-check" />아이디 저장하기 </label>
       <input type="submit" value="Login" />
     </form>
   </div>
