Ignore .DS_Store files

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,7 +2,7 @@
 {% include "partials/home_search.html" %}
 {% endblock %}
 {% block activate%}
-<main class = 'main-container'>
+{% comment %} <main class = 'main-container'>
     <div class='wrapper'>
         <div class='carousel'>
         	<div class='slide'>
@@ -16,7 +16,7 @@
             </div>
         </div>
     </div>      
-</main>
+</main> {% endcomment %}
 {% endblock %} 
 
 {%block script%} 
