--- a/app/templates/reference.html
+++ b/app/templates/reference.html
@@ -12,7 +12,7 @@
         <a href="/" class="reference-header-sub-title">니들이 카페를 알아?</a>
       </div>
       <div class="reference-middle-section">
-        <a href="/findbymap/" class="reference-map">지도로 찾기</a>
+        <a href="{% url 'cafes:findbymap' %}" class="reference-map">지도로 찾기</a>
         <a href="/menu/" class="reference-menu">메뉴로 찾기</a>
         <a href="/category/" class="reference-category">카테고리로 찾기</a>
         <a href="/index/" class="reference-keyword">아무거나</a>
