--- a/app/templates/reference.html
+++ b/app/templates/reference.html
@@ -12,7 +12,7 @@
         <a href="/" class="header-sub-title">니들이 카페를 알아?</a>
       </div>
       <div class="middle-section">
-        <a href="/findbymap/" class="map">지도로 찾기</a>
+        <a href="/findbymap_2/" class="map">지도로 찾기</a>
         <a href="/menu/" class="menu">메뉴로 찾기</a>
         <a href="/category/" class="category">카테고리로 찾기</a>
         <a href="/index/" class="keyword">아무거나</a>
