--- a/app/templates/findbymap_2.html
+++ b/app/templates/findbymap_2.html
@@ -3,19 +3,24 @@
   <head>
     <meta charset="utf-8" />
     <title>findbymap</title>
-    <link rel="stylesheet" href="findbymap.css" />
+    <link rel="stylesheet" href="total.css" />
   </head>
   <body>
-    <div id="map"></div>
-    <script type="text/javascript" src=""></script>
-    <script>
-      var container = document.getElementById('map');
-      var options = {
-        center: new kakao.maps.LatLng(33.450701, 126.570667),
-        level: 3,
-      };
+    <div id="map" style="width: 100%; height: 350px"></div>
 
-      var map = new kakao.maps.Map(container, options);
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=11dcd5ee5605dff12e20c76f51b215de"
+    ></script>
+    <script>
+      var mapContainer = document.getElementById('map'), // 지도를 표시할 div
+        mapOption = {
+          center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+          level: 3, // 지도의 확대 레벨
+        };
+
+      // 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
+      var map = new kakao.maps.Map(mapContainer, mapOption);
     </script>
     <!-- <div class="sidebar"> -->
     <!-- <div class="find-mat">
