--- a/app/templates/reference.html
+++ b/app/templates/reference.html
@@ -13,8 +13,7 @@
       </div>
       <div class="reference-middle-section">
         <a href="{% url 'cafes:findbymap' %}" class="reference-map">지도로 찾기</a>
-        <a href="/menu/" class="reference-menu">메뉴로 찾기</a>
-        <a href="/category/" class="reference-category">카테고리로 찾기</a>
+        <a href="{% url 'cafes:category' %}" class="reference-category">카테고리로 찾기</a>
         <a href="/index/" class="reference-keyword">아무거나</a>
       </div>
       <div class="right-section">
@@ -23,7 +22,9 @@
         <a href="/index/" class="createaccount">회원가입</a>
       </div>
     </section>
-    {% block search %} {% endblock %} {% block activate %} {% endblock %} {% block login %} {% endblock %}
+    {% block search %}{% endblock %} {% block activate %}{% endblock %} {% block login %}{% endblock %} {% comment %}
+    dkjf {% endcomment %} {% block choose %} {% endblock %} {% block content %}{% endblock %} {% comment %}dfs
+    {%endcomment %} {% block script %} {% endblock %}
     <div class="footer">
       <div class="footer-upper-box">
         <div class="box">김혜원</div>
